1.详情页优化

--- a/src/screen/detailScreen/mangaDetail/index.css
+++ b/src/screen/detailScreen/mangaDetail/index.css
@@ -5,3 +5,10 @@
         -ms-filter: blur(10px);    
             filter: blur(10px);    
 }
+
+.text_div{
+    white-space: nowrap;
+    text-overflow:ellipsis;
+    text-overflow: ellipsis;
+    overflow:hidden;
+}
