--- a/src/screen/detailScreen/mangaDetail/index.css
+++ b/src/screen/detailScreen/mangaDetail/index.css
@@ -13,6 +13,14 @@
     overflow:hidden;
 }
 
+.intro{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .Modal {
     position: absolute;
     left: 20px;
