1.多文本情况优化

--- a/src/screen/collect/index.css
+++ b/src/screen/collect/index.css
@@ -2,3 +2,9 @@
     content: "";
     flex: auto;
  }
+
+ .one_line_title{
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+ }
