--- a/src/screen/detailScreen/cgDetail/index.css
+++ b/src/screen/detailScreen/cgDetail/index.css
@@ -1,3 +1,24 @@
 .scrolllist{
     -webkit-overflow-scrolling : touch;
 }
+
+.Modal_CG {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 0px;
+    height: 220px;
+    background-color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .Overlay_CG {
+    z-index: 200;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.7);
+  }
